Update website for F2020 and fix header spacing

--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -15,7 +15,7 @@
 .site-title {
     font-size: 20px;
     line-height: $nav-height;
-    letter-spacing: -1px;
+    //letter-spacing: -1px;
     margin-bottom: 0;
 }
 .site-nav {
